--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
               </a>
             </div>
             <div class="categories__list">
-              <a class="categories__list__item product">
+              <a href="" class="categories__list__item product">
                 <picture class="product__img">
                   <source
                     srcset="
@@ -536,7 +536,7 @@
                   <h5 class="product__status__new">Новинка</h5>
                 </div>
               </a>
-              <a class="categories__list__item product sale">
+              <a href="" class="categories__list__item product sale">
                 <picture class="product__img">
                   <source
                     srcset="
@@ -558,7 +558,7 @@
                   <h5 class="product__status__sale">Акція</h5>
                 </div>
               </a>
-              <a class="categories__list__item product">
+              <a href="" class="categories__list__item product">
                 <picture class="product__img">
                   <source
                     srcset="
@@ -573,7 +573,7 @@
                   <h4 class="product__price">8 999 грн</h4>
                 </div>
               </a>
-              <a class="categories__list__item product">
+              <a href="" class="categories__list__item product">
                 <picture class="product__img">
                   <source
                     srcset="
@@ -591,7 +591,7 @@
                   <h5 class="product__status__new">Новинка</h5>
                 </div>
               </a>
-              <a class="categories__list__item product">
+              <a href="" class="categories__list__item product">
                 <picture class="product__img">
                   <source
                     srcset="
@@ -606,7 +606,7 @@
                   <h4 class="product__price">8 999 грн</h4>
                 </div>
               </a>
-              <a class="categories__list__item product sale">
+              <a href="" class="categories__list__item product sale">
                 <picture class="product__img">
                   <source
                     srcset="
