--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     />
     <script src="./js/up-button.js" defer></script>
     <script src="./js/mobile-menu.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"
+      defer
+    ></script>
     <script src="./js/slider.js" defer></script>
   </head>
   <body>
