add form corrections

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
             <div class="container questions__container">
               <div class="questions__box">
                 <h3 class="questions__box__title">Замовте консультацію</h3>
-                <div class="questions__box__form questions__form">
+                <form class="questions__box__form questions__form">
                   <input
                     type="text"
                     name="name"
@@ -723,7 +723,7 @@
                   <button type="submit" class="questions__form__button button">
                     Відправити
                   </button>
-                </div>
+                </form>
                 <p class="questions__box__text">
                   Залиште заявку або телефонуйте за номером
                   <b>(099) 111 22 33</b>, і наш менеджер звяжеться з вами для
